other/e-l/exclude-namespaces-dynamically/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exclude-namespaces-example
policies:
- ../exclude-namespaces-dynamically.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: exclude-namespaces-example
  resources:
  - bad-pod01
  result: fail
  rule: exclude-namespaces-dynamically-pods
- kind: Pod
  policy: exclude-namespaces-example
  resources:
  - good-pod03
  result: pass
  rule: exclude-namespaces-dynamically-pods
- kind: Pod
  policy: exclude-namespaces-example
  resources:
  - good-pod01
  - good-pod02
  result: skip
  rule: exclude-namespaces-dynamically-pods
variables: values.yaml
